[gd_scene load_steps=8 format=3 uid="uid://a88888888888"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://c54444444444" path="res://scenes/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://d66666666666" path="res://scenes/Obstacle.tscn" id="3_obstacle"]
[ext_resource type="PackedScene" uid="uid://b77777777777" path="res://scenes/HUD.tscn" id="4_hud"]
[ext_resource type="PackedScene" uid="uid://b11111111111" path="res://scenes/LevelManager.tscn" id="5_lm"]
[ext_resource type="PackedScene" uid="uid://c22222222222" path="res://scenes/ParallaxBackground.tscn" id="6_bg"]
[ext_resource type="Script" path="res://scripts/CameraShake.gd" id="7_camera"]

[node name="Main" type="Node"]
script = ExtResource("1_main")
obstacle_scene = ExtResource("3_obstacle")

[node name="ParallaxBackground" parent="." instance=ExtResource("6_bg")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(240, 360)
script = ExtResource("7_camera")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(100, 350)

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Ground1" type="StaticBody2D" parent="."]
position = Vector2(0, 670)
collision_layer = 2
collision_mask = 1

[node name="ColorRect" type="ColorRect" parent="Ground1"]
offset_right = 480.0
offset_bottom = 50.0
color = Color(0.454902, 0.678431, 0.321569, 1)

[node name="Ground2" type="StaticBody2D" parent="."]
position = Vector2(480, 670)
collision_layer = 2
collision_mask = 1

[node name="ColorRect" type="ColorRect" parent="Ground2"]
offset_right = 480.0
offset_bottom = 50.0
color = Color(0.454902, 0.678431, 0.321569, 1)

[node name="HUD" parent="." instance=ExtResource("4_hud")]

[node name="LevelManager" parent="." instance=ExtResource("5_lm")]

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]